# ge_rbf

./: .gitignore  Documentation.md  Exampls.py  Hyper_Parameter_Selection.ipynb  Linear_Transformations.ipynb  Model_Examples.ipynb  RBF Surrogate Models b2563dceb4df4612bf4339073b80bae3.md  RBFClass.py  README.md  pyproject.toml  rbfmodels.py
.ipynb_checkpoints/: Documentation-checkpoint.md  Hyper_Parameter_Selection-checkpoint.ipynb  Linear_Transformations-checkpoint.ipynb
.virtual_documents/: Examples.ipynb
Examples/: Hyper_Parameter_Selection.ipynb  Linear_Transformations.ipynb  Model_Examples.ipynb
Examples/.ipynb_checkpoints/: Model_Examples-checkpoint.ipynb
ge_rbf/: preprocessing.py  test_problems.py
ge_rbf/.ipynb_checkpoints/: Hyper_Parameter_Selection-checkpoint.ipynb  test_problems-checkpoint.py
src/ge_rbf/: preprocessing.py
